# qr-code

./: .gitignore  README.md  constants.py  encoder.py  error_correction.py  gf_functions.py  pyproject.toml
lookup_tables/: AlphaNumericCharCapacity.csv  error_correction.csv
src/: __init__.py  encoder.py  error_correction.py  gf_functions.py  qr_code_generator.py
src/qr_code/: __init__.py  error_correction.py  poly_functions.py  qr_code_generator.py
tests/: test_encoder.py  test_error_correction.py  test_gf_functions.py  test_poly_functions.py
