[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qr_code"
version = "0.1.0"
description = "QR code generator from scratch"
authors = [{name = "Jonathan Choi"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]